--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.2.45",
     "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45",
-    "expo-router": "~3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.6",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
